--- a/Airport-system/src/main/resources/templates/login.html
+++ b/Airport-system/src/main/resources/templates/login.html
@@ -10,17 +10,17 @@
     <section>
         <article> 
             <h1>Login</h1>
-            <form th:action="@{/home}" th:method = "POST">
+            <form th:action="@{/loggedIn}" th:method = "POST">
                 <div>
-                    <input type="email" placeholder="youremail@domain.com" name = "email">
+                    <input type="email" placeholder="youremail@domain.com" name = "email" required>
                     <label for="email">Email</label>
                 </div>
                 <div>
-                    <input type="text" placeholder="Ivan Ivanov" name = "username">
+                    <input type="text" placeholder="Ivan Ivanov" name = "username" required>
                     <label for="username">Username</label> 
                 </div>
                 <div>
-                    <input type="password" placeholder="**********" name = "password"> 
+                    <input type="password" placeholder="**********" name = "password" required> 
                     <label for="password">Password</label> 
                 </div>
                 <div class="remember-me">
