--- a/Airport-system/src/main/resources/templates/register.html
+++ b/Airport-system/src/main/resources/templates/register.html
@@ -12,19 +12,19 @@
             <h1>Register</h1>
             <form th:action="@{/registered}" th:method = "POST">
                 <div>
-                    <input type="email" placeholder="youremail@domain.com" name = "email">
+                    <input type="email" placeholder="youremail@domain.com" name = "email" required>
                     <label for="email">Email</label>
                 </div>
                 <div>
-                    <input type="text" placeholder="Ivan Ivanov" name = "username">
+                    <input type="text" placeholder="Ivan Ivanov" name = "username" required>
                     <label for="username">Username</label> 
                 </div>
                 <div>
-                    <input type="password" placeholder="**********" name = "password"> 
+                    <input type="password" placeholder="**********" name = "password" required> 
                     <label for="password">Password</label> 
                 </div>
                 <div>
-                    <input type="password" placeholder="**********" name = "confirmPassword"> 
+                    <input type="password" placeholder="**********" name = "confirmPassword" required> 
                     <label for="password">Confirm password</label> 
                 </div>
                     <div class="remember-me">
