--- a/Airport-system/src/main/resources/templates/login.html
+++ b/Airport-system/src/main/resources/templates/login.html
@@ -11,6 +11,7 @@
         <article> 
             <h1>Login</h1>
             <form th:action="@{/loggedIn}" th:method = "POST">
+                <h3 th:if = "${isInvalid}">Invalid credentials</h3>
                 <div>
                     <input type="email" placeholder="youremail@domain.com" name = "email" required>
                     <label for="email">Email</label>
@@ -26,8 +27,6 @@
                 <div class="remember-me">
                 <input type="checkbox" id = "checkbox" name = "toRemember"><span>Remember me</span>  
                 </div>
-                
-                
                 <button type="submit">Login</button>
             </form>
         </article>
