--- a/Airport-system/src/main/resources/templates/index.html
+++ b/Airport-system/src/main/resources/templates/index.html
@@ -24,7 +24,7 @@
     <section class="content-container">
         <h1 th:unless = "${isUserLoggedIn}">Log in to see your flights</h1>
         <div class = "btns" th:if = "${isUserLoggedIn}">
-            <button><a th:href="@{/}">Add flight</a></button>
+            <button><a th:href="@{/addTicket}">Save flight</a></button>
             <button><a th:href="@{/}">See all flights</a></button>
             <button><a th:href="@{/}">See saved flights</a></button>
         </div>
