--- a/Airport-system/src/main/resources/static/styles/addTicketPageStyles.css
+++ b/Airport-system/src/main/resources/static/styles/addTicketPageStyles.css
@@ -47,13 +47,13 @@ th, td {
     text-align: center;
 }
 
-td button {
+.save-btn button {
     padding: 6px 24px;
     background-color: black;
     margin: 2px;
 }
 
-td button a {
+.save-btn button a {
     text-decoration: none;
     font-size: 18px;
     color: white;
